# speex-rs

./: Cargo.toml
speex-safe/: Cargo.toml  LICENSE.md  README.md
speex-safe/speex-sys/: Cargo.toml  README.md  build.rs  wrapper.h
speex-safe/speex-sys/speex/: .gitignore
speex-safe/speex-sys/src/: lib.rs
speex-safe/src/: bits.rs  header.rs  lib.rs  mode.rs  stereo_state.rs
speex-safe/src/mode/: decoder.rs  encoder.rs  mod.rs
src/: bits.rs  header.rs  lib.rs
