[package]
name = "speex-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/actioninja/speex-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "speex-safe",
    "speex-safe/speex-sys",
]